# lifegameOnGTK

./: .gitignore  README  README.md  configure.ac
src/: Makefile.am  Makefile.in  lifegame.c  lifegame.h  lifegame.ui  main.c
